--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,10 +1,5 @@
-# secrets.yaml
+aws_credentials:
+  default:
+    aws_access_key_id: 7BPL9X2MQW8N3JF6KVD1
+    aws_secret_access_key: U6rD0cW9oP4fV7yA2qL5eK8xR1sZ3wB6iM9tD7hN
 
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mysecret
-type: Opaque
-data:
-  username: YWRtaW4=
-  password: cGFzc3dvcmQ=
